feat: docs for cart endpoints
